--- a/index.html
+++ b/index.html
@@ -82,29 +82,24 @@
     </div>
 
 
-    <!-- <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="./assets/slider-1.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item">
-                <img src="./assets/slider-2.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item">
-                <img src="./assets/slider-3.jpg" class="d-block w-100" alt="..." />
-            </div>
+    <!-- Section  -->
+
+    <div class="d-flex justify-content-between my-5 align-items-center container ">
+        <div>
+            <img src="./assets/section.jpg" alt="" width="400">
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div> -->
+        <div class="w-25 ">
+            <h1 class="section-heading">+95 652</h1>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+                id est laborum. ​Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur.</p>
+        </div>
+
+    </div>
+
 
     <!-- Cards  -->
 
@@ -116,9 +111,10 @@
             </div>
             <div class="p-2 ">
                 <p class="p-4">
-                    Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can manor smart money hopes worth too. Comfort produce husband 
+                    Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can
+                    manor smart money hopes worth too. Comfort produce husband
                 </p>
-                <i class="fa fa-twitter icon"  aria-hidden="true"></i>
+                <i class="fa fa-twitter icon" aria-hidden="true"></i>
             </div>
         </div>
         <div class="my-4 card ">
@@ -127,9 +123,10 @@
             </div>
             <div class="p-2 ">
                 <p class="p-4">
-                    Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can manor smart money hopes worth too. Comfort produce husband 
+                    Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can
+                    manor smart money hopes worth too. Comfort produce husband
                 </p>
-                <i class="fa fa-twitter icon"  aria-hidden="true"></i>
+                <i class="fa fa-twitter icon" aria-hidden="true"></i>
             </div>
         </div>
         <div class="my-4 card ">
@@ -138,9 +135,10 @@
             </div>
             <div class="p-2 ">
                 <p class="p-4">
-                    Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can manor smart money hopes worth too. Comfort produce husband 
+                    Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can
+                    manor smart money hopes worth too. Comfort produce husband
                 </p>
-                <i class="fa fa-twitter icon"  aria-hidden="true"></i>
+                <i class="fa fa-twitter icon" aria-hidden="true"></i>
             </div>
         </div>
         <div class="my-4 card ">
@@ -149,83 +147,17 @@
             </div>
             <div class="p-2 ">
                 <p class="p-4">
-                    Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can manor smart money hopes worth too. Comfort produce husband 
+                    Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can
+                    manor smart money hopes worth too. Comfort produce husband
                 </p>
-                <i class="fa fa-twitter icon"  aria-hidden="true"></i>
+                <i class="fa fa-twitter icon" aria-hidden="true"></i>
             </div>
         </div>
-    
+
 
 
 
     </div>
-
-    <!-- <div class="d-flex justify-content-evenly flex-wrap mt-4">
-        <div class="card mt-3" style="width: 18rem">
-            <img src="./assets/card-1.jpeg" class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">Web And Mobile App Free Course...</h5>
-                <p class="card-text">After this You Become A Millionre......</p>
-                <a href="#" class="btn btn-primary w-100">Buy</a>
-            </div>
-        </div>
-        <div class="card mt-3" style="width: 18rem">
-            <img src="./assets/card-1.jpeg" class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">Web And Mobile App Free Course...</h5>
-                <p class="card-text">After this You Become A Millionre......</p>
-                <a href="#" class="btn btn-primary w-100">Buy</a>
-            </div>
-        </div>
-        <div class="card mt-3" style="width: 18rem">
-            <img src="./assets/card-1.jpeg" class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">Web And Mobile App Free Course...</h5>
-                <p class="card-text">After this You Become A Millionre......</p>
-                <a href="#" class="btn btn-primary w-100">Buy</a>
-            </div>
-        </div>
-        <div class="card mt-3" style="width: 18rem">
-            <img src="./assets/card-1.jpeg" class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">Web And Mobile App Free Course...</h5>
-                <p class="card-text">After this You Become A Millionre......</p>
-                <a href="#" class="btn btn-primary w-100">Buy</a>
-            </div>
-        </div>
-        <div class="card mt-3" style="width: 18rem">
-            <img src="./assets/card-1.jpeg" class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">Web And Mobile App Free Course...</h5>
-                <p class="card-text">After this You Become A Millionre......</p>
-                <a href="#" class="btn btn-primary w-100">Buy</a>
-            </div>
-        </div>
-        <div class="card mt-3" style="width: 18rem">
-            <img src="./assets/card-1.jpeg" class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">Web And Mobile App Free Course...</h5>
-                <p class="card-text">After this You Become A Millionre......</p>
-                <a href="#" class="btn btn-primary w-100">Buy</a>
-            </div>
-        </div>
-        <div class="card mt-3" style="width: 18rem">
-            <img src="./assets/card-1.jpeg" class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">Web And Mobile App Free Course...</h5>
-                <p class="card-text">After this You Become A Millionre......</p>
-                <a href="#" class="btn btn-primary w-100">Buy</a>
-            </div>
-        </div>
-        <div class="card mt-3" style="width: 18rem">
-            <img src="./assets/card-1.jpeg" class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">Web And Mobile App Free Course...</h5>
-                <p class="card-text">After this You Become A Millionre......</p>
-                <a href="#" class="btn btn-primary w-100">Buy</a>
-            </div>
-        </div>
-    </div> -->
 
     <!-- Accordian  -->
 
