--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 
     <!-- Section  -->
 
-    <div class="d-flex justify-content-between my-5 align-items-center container ">
+    <div class="d-flex justify-content-evenly  py-4   my-5 align-items-center  bg-primary ">
         <div>
             <img src="./assets/section.jpg" alt="" width="400">
         </div>
-        <div class="w-25 ">
+        <div class="w-25 bg-white p-2 ">
             <h1 class="section-heading">+95 652</h1>
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
@@ -107,7 +107,7 @@
     <div class="container d-flex flex-wrap justify-content-between  ">
         <div class="my-4 card ">
             <div class="d-flex cardbg justify-content-center  align-items-center ">
-                <h5 class="ms-5 ">Paul Sacva</h5>
+                <h5 class="ms-5 ">Tina Larson</h5>
             </div>
             <div class="p-2 ">
                 <p class="p-4">
@@ -119,7 +119,7 @@
         </div>
         <div class="my-4 card ">
             <div class="d-flex cardbg justify-content-center  align-items-center ">
-                <h5 class="ms-5 ">Paul Sacva</h5>
+                <h5 class="ms-5 ">Nick Hudson</h5>
             </div>
             <div class="p-2 ">
                 <p class="p-4">
@@ -131,7 +131,7 @@
         </div>
         <div class="my-4 card ">
             <div class="d-flex cardbg justify-content-center  align-items-center ">
-                <h5 class="ms-5 ">Paul Sacva</h5>
+                <h5 class="ms-5 ">Stella Perry</h5>
             </div>
             <div class="p-2 ">
                 <p class="p-4">
