--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         </div>
     </nav>
 
-    <!-- Slider  -->
+    <!-- Hero  -->
 
-    <div class="hero d-flex align-items-center justify-content-end">
+    <div class="hero d-flex align-items-center justify-content-center  justify-content-md-end ">
         <div class=" w-50 m-3  d-flex flex-column  gap-3">
             <h2>Innovative Business is Our Sphere</h2>
             <h6>
@@ -84,21 +84,21 @@
 
     <!-- Section  -->
 
-    <div class="d-flex justify-content-evenly  py-4   my-5 align-items-center  bg-primary ">
-        <div>
-            <img src="./assets/section.jpg" alt="" width="400">
-        </div>
-        <div class="w-25 bg-white p-2 ">
-            <h1 class="section-heading">+95 652</h1>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                id est laborum. ​Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur.</p>
-        </div>
+        <div class="d-flex justify-content-evenly flex-column  flex-md-row  py-4 my-5 align-items-center  bg-primary ">
+            <div>
+                <img src="./assets/section.jpg" alt="" width="400">
+            </div>
+            <div class="w-25 bg-white p-2   ">
+                <h1 class="section-heading">+95 652</h1>
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+                    id est laborum. ​Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                    fugiat nulla pariatur.</p>
+            </div>
 
-    </div>
+        </div>
 
 
     <!-- Cards  -->
